@@ -89,10 +89,18 @@ class Smarty_Internal_TemplateBase extends Smarty_Internal_Data {
 				$_smarty_tpl = $_template;
 				if ($_template->source->recompiled) {
 					if ($this->smarty->debugging) {
+						Smarty_Internal_Debug::start_compile($_template);
+					}
+					$code = $_template->compiler->compileTemplate($_template);
+					if ($this->smarty->debugging) {
+						Smarty_Internal_Debug::end_compile($_template);
+					}
+					if ($this->smarty->debugging) {
 						Smarty_Internal_Debug::start_render($_template);
 					}
 					ob_start();
-					eval("?>" . $_template->compiler->compileTemplate($_template));
+					eval("?>" . $code);
+					unset($code);
 				} else {
 					if (!$_template->compiled->exists || ($_template->smarty->force_compile && !$_template->compiled->isCompiled)) {
 						$_template->compileTemplateSource();
